2014-12-12

	* src/mainwindow.c: main_window_window_state_cb(): added more debug
	  print.

2014-12-09

	* src/prefs_filter.c: fixed a bug that reorder by DnD was not saved.

2014-11-20

	* version 3.5.0beta2

2014-11-20

	* libsylph/recv.c
	  src/quick_search.[ch]
	  src/logwindow.c
	  src/foldersel.c
	  src/message_search.[ch]
	  src/main.c
	  src/alertpanel.c
	  src/inputdialog.c
	  src/export.c
	  src/filesel.c
	  src/account_dialog.c
	  src/import.c
	  src/mainwindow.c
	  src/prefs_filter_edit.c
	  src/prefs_filter.c: updated copyright year.

2014-11-20

	* po/he.po: added Hebrew translation.

2014-11-14

	* nsis/sylpheed-defs.nsh
	  nsis/sylpheed.nsi: updated NSIS scripts.

2014-11-13

	* src/quick_search.c
	  src/message_search.c
	  src/account_dialog.c: made widget sizes dpi-aware.

2014-11-13

	* src/gtkutils.c
	  src/alertpanel.c
	  src/inputdialog.c: made widget spacings dpi-aware.

2014-11-13

	* src/gtkutils.[ch]
	  src/main.c: added command line option '--dpi dpinum'
	  (mainly for debugging).

2014-11-13

	* src/inputdialog.c
	  src/export.c
	  src/import.c: made more dialogs size DPI-aware.

2014-11-12

	* src/sylpheed.rc.in
	  src/Makefile.am
	  src/sylpheed.exe.manifest: win32: added manifest to make
	  sylpheed.exe dpi-aware.

2014-11-11

	* src/logwindow.c
	  src/account_dialog.c
	  src/setup.c
	  src/foldersel.c
	  src/query_search.c
	  src/prefs_filter_edit.c
	  src/prefs_filter.c: made more dialogs size DPI-aware.

2014-11-11

	* src/filesel.c: always set current folder of GtkFileChooser
	  (fixes previous folder not remembered with GTK+ 2.24.23).

2014-11-07

	* src/rpop3.c
	  src/compose.c
	  src/addressbook.c
	  src/about.c: made some dialogs size DPI-aware.

2014-11-07

	* src/notificationwindow.c: adjusted window size.

2014-11-06

	* src/gtkutils.[ch]: added gtkut_get_dpi_multiplier() which returns
	  optimal multiplier for current system DPI.
	* src/progressdialog.c
	  src/notificationwindow.c: made their window sizes DPI-aware.
