@@ -709,3 +709,4 @@ EXPORTS
 	export_msgs_to_mbox @ 708
 	copy_file_stream @ 709
 	procmsg_save_message_as_text @ 710
+	procmime_get_tmp_file_name_for_user @ 711
