@@ -1,5 +1,12 @@
 2014-12-12
 
+	* libsylph/procmime.[ch]
+	  libsylph/libsylph-0.def
+	  src/mimeview.c: made file names generated on opening attachments
+	  more user-friendly.
+
+2014-12-12
+
 	* src/mainwindow.c: main_window_window_state_cb(): added more debug
 	  print.
 
